--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
+atomicwrites==1.3.0
+attrs==19.3.0
 beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+colorama==0.4.3
 idna==2.9
+importlib-metadata==1.5.0
+more-itertools==8.2.0
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.5
 requests==2.23.0
+six==1.14.0
 soupsieve==2.0
 urllib3==1.25.8
+wcwidth==0.1.8
+zipp==3.1.0
